@@ -7,6 +7,7 @@ Changes from 1.5.0 to 1.6.0
 
 ** Improvement
     * [FELIX-2939] - Maven SCR Plugin is not (marked as) thread-safe for parallel builds
+    * [FELIX-2908] - Use same mechanism to get single annotation values as for multiple annotation values
 
 
 Changes from 1.4.0 to 1.5.0
